# howest-1

./: .gitignore  Readme.md
http-apis/: README.md  pyproject.toml
http-apis/http_apis/: main.py
nosql/: .env  .gitignore  README.md  app-azure-creation  compose.yml  convert_to_helm.sh  notes.txt  postgres-azure-creation  pyproject.toml  requirements.txt
nosql/advisor/: correlation.py
nosql/ana_check/: .env  Readme.md  check.py  check2.py
nosql/ana_filter/: Dockerfile  FastAPI filter.md  VIB3_DE.json  pattern_app.py  requirements.txt
nosql/ana_github_actions/: Dockerfile  Readme.md  requirements.txt
nosql/ana_model/: .env  Dockerfile  Readme.md  docker-compose.yml  generate_model.py  llm-generated-prompt.md  model.keras  my_model.keras  pattern_app.py  prompt-based-script-generator.py  prompt-synthetic  requirements.txt  training_script.py
nosql/ana_report/: .dockerignore  .env  .fetch_from_db_and_detect_pattern3.py.swp  Dockerfile  Readme.md  X_test.npy  X_train.npy  array_dataset.csv  docker-compose.yml  env  fastapp.py  fictief.py  fictief_5_consecutive_neg_smooth.py  fictief_neg_but.py  fictief_neg_but1.py  fictief_neg_but2.py  fictief_neg_but3.py  fictief_neg_random_8_consecutive.py  fictief_neg_random_8_consecutive_smooth.py  fictief_pos.py  fictief_pos_but4.py  generate_synthetic5.py  insert-llm-generated-array-into-db.py  market_cap_predictions.csv  overview  report.py  requirements.txt  simple.py  simple2.py  simple3.py  simple4.py  simple_condition  y_test.npy  y_train.npy
nosql/ana_synthetic/: .env  Dockerfile  Readme.md  X_val.npy  model.keras  (+18 more)
(+181 files in other folders)
